fix btn letter spacing and terms dialogue btn

--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_button.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_button.scss
@@ -3,7 +3,6 @@
   background-color: transparent;
   color: cv('gray', '000');
   text-decoration: none;
-  letter-spacing: 0.2em;
   font-weight: 400;
   padding: 1em 3em;
 
@@ -158,7 +157,6 @@
 	border-color: cv('blue', '900');
 	color: cv('blue', '900');
 
-	letter-spacing: .1em;
 	white-space: nowrap;
 
 	&:active,
