--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_codePages.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_codePages.scss
@@ -34,10 +34,6 @@
   li {
     margin-right: 2rem;
     margin-bottom: 1rem;
-
-    a {
-      letter-spacing: 0.1em;
-    }
   }
 }
 
